fixed letter spacing

--- a/css/unseenktm.css
+++ b/css/unseenktm.css
@@ -293,7 +293,7 @@ a {
 }
 
 .lp {
-  letter-spacing: 30%;
+  letter-spacing: 8px;
 }
 
 .uppercase {
